--- a/frontend-angular/Hood/src/app/app.component.html
+++ b/frontend-angular/Hood/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container"></div>
+<div class="container">
     <nav class="navbar navbar-expand navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Neighbourhood</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
